# zephyr-zenoh-example

./: CMakeLists.txt  Kconfig  README.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/src/: main.c
modules/: Kconfig  modules.cmake
modules/zenoh-pico/: CMakeLists.txt  Kconfig
zephyr/: module.yml
